[tool.poetry]
name = "paat"
version = "1.0.0-beta"
description = "A comprehensive toolbox to analyse and model raw physical activity data"

license = "MIT"

authors = ["Marc Weitz <marc.weitz@uit.no>",
           "Shaheen Syed",
           "Alexander Horsch"]

readme = "README.rst"  # Markdown files are supported

repository = "https://github.com/Trybnetic/paat"
homepage = "https://github.com/Trybnetic/paat"

keywords = ["medical-informatics", "physical-activity",
            "health-science", "actigraph", "accelerometry"]

classifiers = ['Development Status :: 3 - Alpha',
               'Environment :: Console',
               'Intended Audience :: Science/Research']

[tool.poetry.dependencies]
python = ">=3.8,<3.10"  # Compatible python versions must be declared here
pandas = "^1.2.4"
scipy = "^1.6.2"
psutil = "^5.8.0"
glob2 = "^0.7"
resampy = "^0.2.2"
joblib = "^1.0.1"
numpy = "^1.20.3"
bitstring = "^3.1.7"
tensorflow = "^2.7.0"
torch = "^1.10.1"
agcounts = "^0.1.1"
toml = "^0.10.2"


[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^2.4"
pydocstyle = "^6.1.1"
flake8 = "^4.0.1"
sphinx = "^1.4"
sphinx_rtd_theme = "1.0.0"
notebook = "^6.4.10"
seaborn = "^0.11.2"
numpydoc = "1.2"
easydev = "0.9.35"
pylint = "^2.0.0"
nbsphinx = "0.8.8"
vulture = "^2.3"
pygt3x = "^0.1.1"


[tool.pylint]
  [tool.pylint.basic]
  good-names = ["nn", "ii", "_", "jj", "df", "X", "hz", "mm", "kk"]

  [tool.pylint.format]
  max-line-length = 120

  [tool.pylint.message_control]
  disable = "E1101"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
