[tool.poetry]
name = "paat"
version = "1.0.0b6"
description = "A comprehensive toolbox to analyse and model raw physical activity data"

license = "MIT"

authors = ["Marc Weitz <marc.weitz@uit.no>",
           "Shaheen Syed",
           "Alexander Horsch"]

readme = "README.rst"  # Markdown files are supported

repository = "https://github.com/Trybnetic/paat"
homepage = "https://github.com/Trybnetic/paat"

keywords = ["medical-informatics", "physical-activity",
            "health-science", "actigraph", "accelerometry"]

classifiers = [
  'Development Status :: 4 - Beta',
  'Environment :: Console',
  'Intended Audience :: Science/Research',
  'Operating System :: MacOS :: MacOS X',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: POSIX',
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"  # Compatible python versions must be declared here
pandas = "^1.5.3"
psutil = "^5.8.0"
glob2 = "^0.7"
resampy = "^0.2.2"
joblib = "^1.0.1"
numpy = "1.23.5"
bitstring = "^3.1.7"
tensorflow = ">=2.11.0,<2.16"
agcounts = "^0.1.1"
toml = "^0.10.2"
tables = "^3.7.0"

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme", "numpydoc", "easydev", "nbsphinx", "docutils"]


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pycodestyle = "^2.11.1"
flake8 = "^7.0.0"
notebook = "^7.0.7"
seaborn = "^0.13.2"
numpydoc = "^1.6.0"
easydev = "^0.12.1"
pylint = "^3.0.3"
nbsphinx = "^0.9.3"
vulture = "^2.11"
pygt3x = "^0.5.2"
jinja2 = "<3.1.0"

[tool.pylint]
  [tool.pylint.basic]
  good-names = ["nn", "ii", "_", "jj", "df", "X", "hz", "mm", "kk"]

  [tool.pylint.format]
  max-line-length = 88

  [tool.pylint.message_control]
  disable = ["E1101", "C0330", "C0326"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
